# TencentBot-Vmi

./: .gitignore  .gitmodules  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  CMakeLists.txt  CODING_TASKS.md  README.md  dumper.cpp  dumper.h  error  hv.h  main.cpp  vcpkg.json
assets/config/: bot_settings.json
build-linux-check/: CMakeCache.txt
src/: BotLogger.h  CaptchaEngine.cpp  CaptchaEngine.h  CheckpointStore.cpp  CheckpointStore.h  DxgiWindowCapture.cpp  DxgiWindowCapture.h  GameMemory.cpp  GameMemory.h  MemflowConnector.cpp  MemflowConnector.h  MemoryReader.cpp  MemoryReader.h  SharedDataStatus.cpp  SharedDataStatus.h  TencentBot.Captcha.cpp  TencentBot.Core.cpp  TencentBot.Motion.cpp  TencentBot.Routes.cpp  TencentBot.TradeOps.cpp  TencentBot.TradingRoute.cpp  TencentBot.cpp  TencentBot.h  VisionEngine.cpp  VisionEngine.h
src/bt/: BehaviorTree.cpp  BehaviorTree.h  RetryDecorator.cpp  RetryDecorator.h  StepDispatchTree.cpp  StepDispatchTree.h  WaitAction.cpp  WaitAction.h
src/config/: BotSettings.cpp  BotSettings.h
src/domain/: MapProperties.h  RunControl.h  TradingRouteBehavior.cpp  TradingRouteBehavior.h  TradingStepTrees.cpp  TradingStepTrees.h
src/runtime/: RuntimeController.cpp  RuntimeController.h
tools/dxgi_streamer/: README.md  requirements.txt  streamer.py  web_kvm.py
